--- a/ui/app/privacyRating.html
+++ b/ui/app/privacyRating.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-8">
-        [fancy graph goes here]
+        <canvas class="privacyChart"></canvas>
     </div>
     <div class="col-xs-4">
         <h3>{{score}} / {{maxScore}}</h3>
