--- a/ui/app/home/home.html
+++ b/ui/app/home/home.html
@@ -4,7 +4,7 @@
     <div class="col-xs-4"> 
         <div class="row">
             <div class="col-xs-12">
-                Picture
+                <img class="img-responsive" src="assets/armory.png">
             </div>
         </div>  
         
@@ -12,7 +12,29 @@
         
         <div class="row">
             <div class="col-xs-12">
-                <p>Lorem ipsum</p>
+                <p>
+                    Armory is a security-focused desktop wallet geared toward
+intermediate and advanced Bitcoin users. The open-source
+consumer wallet was first announced in early 2012. In recent
+months, the company has pivoted to focus their efforts primarily
+on enterprise customers. In addition to support for advanced
+security features such as offline signing and fragmented
+backups, Armory compares favorably to competing wallets
+in terms of privacy. Armory utilizes Bitcoin Core (bitcoind) to
+connect to the Bitcoin network. Consequently, Armory users
+enjoy the network privacy benefits of using a full node. The
+software is compatible with deterministic address generation
+and does not reuse addresses by default. Armory transactions
+broadcast through Bitcoin Core can often be routed through Tor with minor configuration in order to bolster network privacy.</p>
+            <p>
+Armory can improve privacy protections for users on the
+blockchain by supporting a mixing protocol such as CoinJoin.
+More careful handling of change outputs would also bolster
+Armory’s protections on the blockchain. Additionally, Armory
+can provide users more feedback through the GUI about
+potential privacy degradations that may occur — before the
+transactions are broadcast — and help steer the user through
+avoiding those pitfalls.</p>
             </div>
         </div>
     </div>
